abstract psp file management: no errors